components/cost-management/production/policies/update_namespace_labels.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: propagate-cost-management-labels
  annotations:
    policies.kyverno.io/title: Propagate Cost-Center from Namespace
    policies.kyverno.io/category: Cost Management
    policies.kyverno.io/severity: low
    policies.kyverno.io/subject: Pod, Namespace
    policies.kyverno.io/description: >-
      This policy ensures that for Namespaces labeled as tenant type:
      (1) The labels `cost-center` and `insights_cost_management_optimizations` are set if missing.
      (2) The labels `cost-center` and `insights_cost_management_optimizations` are propagated
          to all Pods within the Namespace.
      (3) The `cost-center` label is propagated from the Namespace to the Pod if it exists.
      (4) The `insights_cost_management_optimizations` label is always set to `true` for all Pods.
      (5) If the Namespace does not have a `cost-center` label, it is set to the default value `760`.
spec:
  rules:
    - name: update-resource-optimization-labels-namespace
      match:
        any:
          - resources:
              kinds:
                - Namespace
              selector:
                matchLabels:
                  konflux-ci.dev/type: tenant
      context:
      - name: costCenterLabel
        variable:
          jmesPath: "request.object.metadata.labels.\"cost-center\" || '' "
          default: ""
      - name: insightsCostManagementOptimizationsLabel
        variable:
          jmesPath: "request.object.metadata.labels.\"insights_cost_management_optimizations\" || '' "
          default: ""
      preconditions:
        any:
          - key: "{{ costCenterLabel }}"
            operator: AnyIn
            value: ""
          - key: "{{ insightsCostManagementOptimizationsLabel }}"
            operator: AnyIn
            value: ""
      mutate:
        targets:
          - apiVersion: v1
            kind: Namespace
        patchStrategicMerge:
          metadata:
            labels:
              cost-center: "760"
              insights_cost_management_optimizations: "true"

    - name: update-resource-optimization-labels-pods
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchLabels:
                  konflux-ci.dev/type: tenant
      context:
      - name: costCenterLabel
        variable:
          jmesPath: "request.object.metadata.labels.\"cost-center\" || '' "
          default: ""
      - name: insightsCostManagementOptimizationsLabel
        variable:
          jmesPath: "request.object.metadata.labels.\"insights_cost_management_optimizations\" || '' "
          default: ""
      preconditions:
        any:
          - key: "{{ costCenterLabel }}"
            operator: AnyIn
            value: ""
          - key: "{{ insightsCostManagementOptimizationsLabel }}"
            operator: AnyIn
            value: ""
      mutate:
        targets:
          - apiVersion: v1
            kind: Pod
        patchStrategicMerge:
          metadata:
            labels:
              cost-center: "760"
              insights_cost_management_optimizations: "true"

    - name: propagate-existing-cost-center-from-namespace
      match:
        any:
        - resources:
            kinds:
            - Pod
            namespaceSelector:
              matchLabels:
                konflux-ci.dev/type: tenant
      context:
        - name: costcenterLabel
          apiCall:
            urlPath: "/api/v1/namespaces/{{ request.object.metadata.namespace }}"
            method: GET
            jmesPath: "metadata.labels.\"cost-center\" || '' "
      preconditions:
        all:
          - key: "{{ costcenterLabel }}"
            operator: NotEquals
            value: ""
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              cost-center: "{{ costcenterLabel }}"
              insights_cost_management_optimizations: "true"
