components/cost-management/production/policies/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: label-propagation-valid-cost-center
spec:
  concurrent: false
  description: |
    tests that the labels are correctly set on pods in tenant namespace
    that have the `cost-center` label
  steps:
    - name: Create namespaces for testing
      try:
        - create:
            file: ./resources/namespace-cost-center.yaml
            template: true
            bindings:
              - name: namespace
                value: tenant
              - name: cost_center
                value: "670"
    - name: Apply RBAC
      try:
        - apply:
            file: ../kyverno_rbac.yaml
    - name: Apply kyverno Cluster Policy and assert it exists
      try:
        - apply:
            file: ../update_namespace_labels.yaml
        - assert:
            file: chainsaw-assert-clusterpolicy.yaml
    - name: create pods in tenant
      try:
        - create:
            file: ./resources/pod.yaml
            bindings:
              - name: namespace
                value: tenant
            template: true
    - name: assert pods in the tenant are labeled
      try:
        - assert:
            file: ./resources/expected-pod-matching.yaml
            template: true
            bindings:
              - name: namespace
                value: tenant
              - name: cost_center
                value: "670"

---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: label-not-applied-random-ns
spec:
  concurrent: false
  description: |
    tests that the label is not applied to pods in a non-tenant namespace
  steps:
    - name: Create namespaces for testing
      try:
        - create:
            file: ./resources/namespace-nonmatching.yaml
    - name: Apply RBAC
      try:
        - apply:
            file: ../kyverno_rbac.yaml
    - name: Apply kyverno Cluster Policy and assert it exists
      try:
        - apply:
            file: ../update_namespace_labels.yaml
        - assert:
            file: chainsaw-assert-clusterpolicy.yaml
    - name: create pods in random-ns
      try:
        - create:
            file: ./resources/pod.yaml
            template: true
            bindings:
              - name: namespace
                value: random-ns
    - name: assert pods in random-ns are not labeled
      try:
        - assert:
            file: ./resources/pod.yaml
            template: true
            bindings:
              - name: namespace
                value: random-ns

---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: label-no-cost-center
spec:
  concurrent: false
  description: |
    tests that the label is applied to pods in a namespace
    that matches the label selector
    in a tenant namespace
    and the cost_center label is set
  steps:
    - name: Create namespaces for testing
      try:
        - create:
            file: ./resources/namespace-no-cost-center.yaml
    - name: Apply RBAC
      try:
        - apply:
            file: ../kyverno_rbac.yaml
    - name: Apply kyverno Cluster Policy for pods
      try:
        - apply:
            file: ../update_namespace_labels.yaml
        - assert:
            file: chainsaw-assert-clusterpolicy.yaml
    - name: create pods in tenant-no-cost-center
      try:
        - create:
            file: ./resources/pod.yaml
            template: true
            bindings:
              - name: namespace
                value: tenant-no-cost-center
    - name: assert pods in tenant-no-cost-center are labeled
      try:
        - assert:
            file: ./resources/expected-pod-matching.yaml
            template: true
            bindings:
              - name: namespace
                value: tenant-no-cost-center
              - name: cost_center
                value: "760"

---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: label-empty-cost-center
spec:
  concurrent: false
  description: |
    tests that the cost-management labels are added to an
    existing namespace and pods that matches the label selector
    in a tenant namespace
  steps:
    - name: Apply RBAC
      try:
        - apply:
            file: ../kyverno_rbac.yaml
    - name: Apply kyverno Cluster Policy for pods
      try:
        - apply:
            file: ../update_namespace_labels.yaml
        - assert:
            file: chainsaw-assert-clusterpolicy.yaml
    - name: Create namespaces for testing
      try:
        - create:
            file: ./resources/namespace-empty-cost-center.yaml
    - name: create pods in tenant-no-cost-center
      try:
        - create:
            file: ./resources/pod.yaml
            template: true
            bindings:
              - name: namespace
                value: tenant-empty-cost-center
    - name: assert namespace is updated with cost-center label
      try:
        - assert:
            file: ./resources/namespace-cost-center.yaml
            template: true
            bindings:
              - name: namespace
                value: tenant-empty-cost-center
              - name: cost_center
                value: "760"
              - name: insights_cost_management_optimizations
                value: "true"
    - name: assert pods in tenant-no-cost-center are labeled
      try:
        - assert:
            file: ./resources/expected-pod-matching.yaml
            template: true
            bindings:
              - name: namespace
                value: tenant-empty-cost-center
              - name: cost_center
                value: "760"
